# android-debugger

./: .editorconfig  .gitignore  .mcp.json  CONTRIBUTING.md  README.md
.claude-plugin/: plugin.json
agent/: CMakeLists.txt  README.md  build.sh
agent/src/: agent.cpp
agents/: android-debug-orchestrator.md
server/: build.gradle.kts  gradle.properties  settings.gradle.kts
skills/ad-attach/: SKILL.md
skills/ad-bisect-flaky/: SKILL.md
skills/ad-bisect-flaky/references/: flake-trigger-heuristics.md  plan-template.json
skills/ad-catch/: SKILL.md
skills/ad-catch/references/: exception-fqn-table.md  plan-template.json
skills/ad-detach/: SKILL.md
skills/ad-detach/references/: lifecycle-internals.md
skills/ad-explain/: SKILL.md
skills/ad-explain/references/: anti-hallucination.md  framework-frames.md
skills/ad-investigate/: SKILL.md
skills/ad-investigate/references/: four-shape-triage.md  hang-error-playbook.md
skills/ad-patch/: SKILL.md
skills/ad-patch-revert/: SKILL.md
skills/ad-patch-status/: SKILL.md
skills/ad-setup/: SKILL.md
skills/ad-setup/references/: install-hints.md
skills/ad-status/: SKILL.md
skills/ad-trace/: SKILL.md
skills/ad-trace/references/: plan-template.json  reactive-codepaths.md
skills/ad-walk/: SKILL.md
skills/attach/: SKILL.md
skills/bisect-flaky/: SKILL.md
skills/catch/: SKILL.md
skills/detach/: SKILL.md
skills/explain/: SKILL.md
skills/investigate/: SKILL.md
skills/patch/: SKILL.md
skills/patch-revert/: SKILL.md
skills/patch-status/: SKILL.md
skills/setup/: SKILL.md
skills/status/: SKILL.md
skills/trace/: SKILL.md
skills/walk/: SKILL.md
tools/: android-debugger-classdiff  android-debugger-classdiff.cmd  android-debugger-classdiff.mjs  smoke_v1_3.py  smoke_v1_3_paused.py  smoke_v1_4.py  smoke_v1_5.py  smoke_v1_5_behavioral.py
(+138 files in other folders)
